--- a/static/src/scss/colors.scss
+++ b/static/src/scss/colors.scss
@@ -20,15 +20,15 @@
 *
 **********************************************************************************/
 
-$o-brand-odoo: #243742;
-$o-brand-primary: #5D8DA8;
+$o-brand-odoo: #3c4393;
+$o-brand-primary: #292e46;
 
-$mk-required-color: #d1dfe6;
+$mk-required-color: #A3A8E6;
 
 $mk-apps-color: #f8f9fa;
 
 $mk-appbar-color: #dee2e6;
-$mk-appbar-background: #000000;
+$mk-appbar-background: #494C66;
 
 $mk-brand-gradient-start: lighten($o-brand-odoo, 10%);
 $mk-brand-gradient-end: lighten($o-brand-odoo, 20%);
